tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__MakingSenseofSpa-AAAAAAAAAAAAAAAAAAAIWg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2138,
  "prerequisites": [
    97
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Nobody likes an untidy base. You can craft a spray can and later fill it with Chemical Dye made from sulfuric acid to color coordinate your carpets, cables, wires, and machines. But for now, have a couple of freebies.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Making Sense of Spaghetti",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97
  ],
  "rewards": [],
  "tasks": []
}
