tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__ManipulatorUpgra-NKKa001sQ9qXBPAUEV4Vrg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5578908642278512046,
  "optional_prerequisites": [
    176,
    10002568955781911106
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have a Matter Manipulator... why not make it better?\n\nThese upgrades will give huge quality of life improvements when using should you choose to craft them. \n\n[note]Pay attention to the applicable tier of MM before you do so![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Manipulator Upgrades",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
