tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__MoHammersMoProbl-AAAAAAAAAAAAAAAAAAAHrg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1966,
  "optional_prerequisites": [
    1968,
    1963,
    1965
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Yes indeed, time for another type of hammer. The master carpentry hammer will allow you to rotate the blocks from the various workers.\n\nSneak to rotate the blocks vertically.\n\nWhy is the lower tier hammer the master hammer? Who knows??",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mo' Hammers Mo' Problems",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
