tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__MoreLikeOuchitec-AAAAAAAAAAAAAAAAAAAHwg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1986,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The sawbench can turn most full cube blocks into amazing shapes of various kinds.\n\nRight-click with the hammer to rotate 90 degrees. Shift-right-click with the hammer to change the orientation of the \"bottom\" face.\n\nThe Chisel is used to alter the structure of blocks in various ways. Some blocks automatically form connections with adjacent blocks. These connections can be disabled and re-enabled by right-clicking with a chisel near the side that you want to change.\n\nSome blocks can have a secondary material applied to them. The secondary material can be removed by right-clicking on the center of the block with a chisel.\n\nYou can also right-click on a vanilla Glass, Glass Pane, Glowstone or Ice block with a chisel to harvest the block without breaking it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "More Like Ouch-i-tect",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
