tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__MortarandTiles-AAAAAAAAAAAAAAAAAAAHqQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1961,
  "prerequisites": [
    1960
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make ceramic tile patterns, you need to convert your blocks into tiles. First make mortar, and then use the mortar with your blocks in a 3 block + 1 mortar pattern in the crafting table to get ceramic tiles.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mortar and Tiles",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1960
  ],
  "rewards": [],
  "tasks": []
}
