tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__MyAncientEnemy-AAAAAAAAAAAAAAAAAAAHlQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1941,
  "prerequisites": [
    1935
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The one place Chisel is weak is in stairs. It would be nice to have more variety, but later I'll show you how to make any block into a custom stair.\n\nYou can also search NEI for \"stairs\" to find stairs from other mods.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "My Ancient Enemy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1935
  ],
  "rewards": [],
  "tasks": []
}
