tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__ObsidianChest-QMlw6Z67T5-y_qflA7On2Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11437823223018006489,
  "prerequisites": [
    1094
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Combining diamond chest with obsidian allowed you to create a chest that is blast proof!\n\n[note]Just as with the previous chests you can also upgrade with a fitting upgrade item.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§8Obsidian Chest",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1094
  ],
  "rewards": [],
  "tasks": []
}
