tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BuildingBetterBa-AAAAAAAAAAAAAAAAAAAADQ==__ObsidianShulkerB-MbFXZcovQ1GRxQCeS2PUuw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14568937336003089595,
  "prerequisites": [
    13073740252492184943,
    6770966914599122145,
    1148
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The portable equivalent of the Obsidian Barrel that retains it's explosion-proof qualities.\n\nHas §n108§r slots.\n\n[note]Can be Dyed![/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lObsidian Shulker Box",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13073740252492184943,
    6770966914599122145,
    1148
  ],
  "rewards": [],
  "tasks": []
}
